release 1.9
- Wadl generator capable of generating XML schemas for params is used by default from now.
- Added support for Freemarker templates, see contribs/jersey-freemarker and samples/freemarker
- Fixed issue 755
  http://java.net/jira/browse/JERSEY-755
  Wadl javadoc tag - response doc wasn't processed correctly in all cases
- Fixed issue 756
  http://java.net/jira/browse/JERSEY-756
  Applied patch from a contributor - schemas generated during wadl creation weren't included in ouput
  of maven-wadl-plugin
- Jersey non blocking client moved from experimental to contribs
- Fixed issue 753
  http://java.net/jira/browse/JERSEY-753
  Removed a hard dependency on JAXB RI introduced when implementing support for XmlHeader annotation in Jersey 1.6.
- Fixed issue 686
  http://java.net/jira/browse/JERSEY-686
  Clarified WebAppDescriptor's contextPath and servletPath
- Jackson dependency upgrade: 1.7.1 -> 1.8.3
- Fixed issue 745
  http://java.net/jira/browse/JERSEY-745
  @FormDataParam parameters were ignored in generated wadl
- Suport for Generating XML Schema from JAX-B classes
  Added wadl decorator WadlGeneratorJAXBGrammarGenerator that looks at attached JAX-B classes and automatically
  generates schemas for them.
- Fixed issue 737
  http://java.net/jira/browse/JERSEY-737
  javadoc typo
- *Breaking change*
   Updating wadl namespace from "http://research.sun.com/wadl/2006/10" to
    "http://wadl.dev.java.net/2009/02". WADL format changed slightly too, see
    http://wadl.java.net/wadl20090202.xsd
    

release 1.8 (06-2011)
- Fixed GlassFish issue 16199
  http://java.net/jira/browse/GLASSFISH-16199
  IllegalArgumentException: object is not an instance of declaring class - on a REST / EJB Service
- Breaking change in client API - removed RequestWriter.headerValueToString().
  Also changed constructors of AsyncWebResource and AsyncViewResource to
  protected (from package private and private).
- Fixed issue 726