@@ -1,0 +1,123 @@
+/*
+ * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
+ *
+ * Copyright (c) 2011 Oracle and/or its affiliates. All rights reserved.
+ *
+ * The contents of this file are subject to the terms of either the GNU
+ * General Public License Version 2 only ("GPL") or the Common Development
+ * and Distribution License("CDDL") (collectively, the "License").  You
+ * may not use this file except in compliance with the License.  You can
+ * obtain a copy of the License at
+ * http://glassfish.java.net/public/CDDL+GPL_1_1.html
+ * or packager/legal/LICENSE.txt.  See the License for the specific
+ * language governing permissions and limitations under the License.
+ *
+ * When distributing the software, include this License Header Notice in each
+ * file and include the License file at packager/legal/LICENSE.txt.
+ *
+ * GPL Classpath Exception:
+ * Oracle designates this particular file as subject to the "Classpath"
+ * exception as provided by Oracle in the GPL Version 2 section of the License
+ * file that accompanied this code.
+ *
+ * Modifications:
+ * If applicable, add the following below the License Header, with the fields
+ * enclosed by brackets [] replaced by your own identifying information:
+ * "Portions Copyright [year] [name of copyright owner]"
+ *
+ * Contributor(s):
+ * If you wish your version of this file to be governed by only the CDDL or
+ * only the GPL Version 2, indicate your decision by adding "[Contributor]
+ * elects to include this software in this distribution under the [CDDL or GPL
+ * Version 2] license."  If you don't indicate a single choice of license, a
+ * recipient has the option to distribute your version of this file under
+ * either the CDDL, the GPL Version 2 or to extend the choice of license to
+ * its licensees as provided above.  However, if you add GPL Version 2 code
+ * and therefore, elected the GPL Version 2 license, then the option applies
+ * only if the new code is made subject to such option by the copyright
+ * holder.
+ */
+package com.sun.jersey.impl.container.filter;
+
+import com.sun.jersey.api.client.ClientResponse;
+import com.sun.jersey.api.container.filter.CsrfProtectionFilter;
+import com.sun.jersey.api.core.DefaultResourceConfig;
+import com.sun.jersey.api.core.ResourceConfig;
+import com.sun.jersey.impl.AbstractResourceTester;
+import com.sun.jersey.api.client.WebResource;
+import java.util.Arrays;
+import javax.ws.rs.GET;
+import javax.ws.rs.PUT;
+import javax.ws.rs.Path;
+import javax.ws.rs.core.Response;
+
+/**
+ *
+ * @author Martin Matula
+ */
+public class CsrfProtectionFilterTest extends AbstractResourceTester {
+
+    private static final String HEADER_NAME = "X-Requested-By";
+
+    @Path("/resource")
+    public static class Resource {
+
+        @GET
+        public String get() {
+            return "GET";
+        }
+
+        @PUT
+        public String put() {
+            return "PUT";
+        }
+    }
+
+    public CsrfProtectionFilterTest(String testName) {
+        super(testName);
+    }
+
+    public void testGetNoHeader() {
+        ResourceConfig rc = new DefaultResourceConfig(Resource.class);
+        rc.getProperties().put(ResourceConfig.PROPERTY_CONTAINER_REQUEST_FILTERS,
+                Arrays.asList(new CsrfProtectionFilter()));
+        initiateWebApplication(rc);
+
+        WebResource r = resource("/resource");
+
+        assertEquals("GET", r.get(String.class));
+    }
+
+    public void testGetWithHeader() {
+        ResourceConfig rc = new DefaultResourceConfig(Resource.class);
+        rc.getProperties().put(ResourceConfig.PROPERTY_CONTAINER_REQUEST_FILTERS,
+                Arrays.asList(new CsrfProtectionFilter()));
+        initiateWebApplication(rc);
+
+        WebResource.Builder r = resource("/resource").header(HEADER_NAME, "");
+
+        assertEquals("GET", r.get(String.class));
+    }
+
+    public void testPutNoHeader() {
+        ResourceConfig rc = new DefaultResourceConfig(Resource.class);
+        rc.getProperties().put(ResourceConfig.PROPERTY_CONTAINER_REQUEST_FILTERS,
+                Arrays.asList(new CsrfProtectionFilter()));
+        initiateWebApplication(rc);
+
+        WebResource r = resource("/resource", false);
+
+        assertEquals(Response.Status.BAD_REQUEST.getStatusCode(), r.put(ClientResponse.class).getStatus());
+    }
+
+    public void testPutWithHeader() {
+        ResourceConfig rc = new DefaultResourceConfig(Resource.class);
+        rc.getProperties().put(ResourceConfig.PROPERTY_CONTAINER_REQUEST_FILTERS,
+                Arrays.asList(new CsrfProtectionFilter()));
+        initiateWebApplication(rc);
+
+        WebResource.Builder r = resource("/resource").header(HEADER_NAME, "");
+
+        assertEquals("PUT", r.put(String.class));
+    }
+}
